deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kam
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kam
      app.kubernetes.io/part-of: kam
      app.kubernetes.io/version: 0.0.1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kam
        app.kubernetes.io/part-of: kam
        app.kubernetes.io/version: 0.0.1
    spec:
      containers:
      - name: kam
        image: quay.io/isequeir/kam:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: web-files
          mountPath: /usr/share/kam
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      volumes:
      - name: web-files
        configMap:
          name: www-files
