deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kamApps
  labels:
    app.kubernetes.io/name: kamApps
    app.kubernetes.io/version: 0.0.1
spec:
  selector:
    app.kubernetes.io/name: kamApps
    app.kubernetes.io/version: 0.0.1
  ports:
  - port: 8080
    protocol: TCP
    name: http
