deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kam
  name: kam
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: kam
    weight: 100
